--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
     "he": "^1.2.0",
+    "js-cookie": "^3.0.5",
     "loader-utils": "^3.2.1",
     "next": "13.4.0",
     "nextjs-progressbar": "^0.0.16",
     "parameterize": "^1.0.0",
     "path": "^0.12.7",
     "react": "18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
