--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.14",
     "date-fns": "^2.30.0",
+    "disqus-react": "^1.1.5",
     "dotenv": "^16.0.3",
     "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
